--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <script>
         // Array of video URLs
-        var vidArr = ["hoover.mp4", "mercy.mp4", "pablo.webm", "slowjamz.webm", "pablo.webm", "power.mp4", "blk.mp4", "fuksum.mp4"];
+        var vidArr = ["hoover1.webm", "hoover2.webm", "power2.webm", "slowjamz.webm", "pablo.webm", "power1.webm", "speech.webm"];
 
         // Array of quotes
         var quoteArr = [
