--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         }); 
         
 
-        var countDownDate = new Date("Feb 9, 2024 00:00:25").getTime();
+        var countDownDate = new Date("Feb 10, 2024 3:30:00").getTime();
         var x = setInterval(function() {
             var now = new Date().getTime();
             var distance = countDownDate - now;
@@ -134,7 +134,7 @@
             document.getElementById("demo").innerHTML = days + "d " + hours + "h " + minutes + "m " + seconds + "s ";
             if (distance < 0) {
                 clearInterval(x);
-                document.getElementById("demo").innerHTML = "EXPIRED";
+                document.getElementById("demo").innerHTML = "IT'S VULTURIN' TIME.";
             }
         }, 1000);
     </script>
