--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 
             // Redirect to cole.com if 'cole' is typed
             if (document.cPressed && document.oPressed && document.lPressed && document.ePressed) {
-                window.location.href = "https://cole.com";
+                window.location.href = "https://soundcloud.com/icyz_real?ref=clipboard&p=i&c=1&si=943121565C4E42AA85F98FFBD9D08E89&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing";
             }
             });
     </script>
